# mdeez

./: Cargo.toml  flake.nix
crates/runner/: Cargo.toml  build.rs
crates/runner/src/: controller.rs  graphics.rs  main.rs  state.rs
crates/shader/: Cargo.toml
crates/shader/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
